# stl-mesh-carver-experiments

./: .gitignore  Cargo.toml  README.md
smc-core/: Cargo.toml
smc-core/src/unreal/: mod.rs  stl_mesh_carver.rs
